# asw_code_challenge

./: BUILD_HOWTO.md  CMakeLists.txt  Improvements.txt  README.md  build.bat  build.sh  comm_interface.h  data_structures.h  driver.c  driver.h  i2c.c  i2c.h  lis3mdl.c  lis3mdl.h  lis3mdltr.c  lis3mdltr.h  main.c  makefile  test  test.c
README/: README.md
